 - Bug Fix: Bots not always given a race/XP right away
 - Bug Fix: Human health set to 190 w/listen servers (thanks DesasterUK)
 - Bug Fix: Invisibility disappearing after use of Big Bad Voodoo (thanks mattypee)
 - Bug Fix: Changerace menu not appearing when joining server on listen server (thanks DesasterUK)
 - Bug Fix: Assist XP giving too much
 - Change: Respawn time from 1.5 seconds to 0.2 (by ability or item)
 - Change: Bots skin will change now if they mole or buy chameleon
 - Change: (B5) No longer set maximum money to 16000 when setting money
 - Removed: NVault support - default is now SQLite
 - Removed: Purchasing items when moling (was removing buyzones for others)
 - Re-write: How ultimate icons are handled

v3.0 RC5
 - Bug Fix: Getting more health than you should with Devotion Aura
 - Bug Fix: Run-time errors from RC4 which made it unplayable

To Do:
 - all menus wait for other menus to disappear?

v3.0 RC4
 - Addition: Changerace will now work with CSDM
 - Addition: resetskills will now work with CSDM
 - Addition: Appropriate messages for resetskills/changerace (instead of next round now says when respawn)
 - Addition: /levitation command to enable/disable levitation
 - Addition: Changerace menu will appear after other menus are done (i.e. so you can choose CSDM then war3ft)
 - Bug Fix: Using wc3_bot_buy_item didn't actually work - bots could never buy items
 - Bug Fix: Setting wc3_bot_buy_item to 0 should disable the feature but it wasn't (thanks mexykanu + YamiKaitou)
 - Bug Fix: Bug with warden and planting the bomb (thanks damian086pl)
 - Bug Fix: (DOD) Buyzone was attempted to be created when a player would mole
 - Bug Fix: (DOD) Runtime error in WC3_Death
 - Bug Fix: Runtime error - http://wc3mods.net/forums/viewtopic.php?t=2281
 - Bug Fix: Possible for new player to gain xp assist while spectating (thanks kp_downarrow)
 - Bug Fix: Possible to use shopmenu2 with <= 4 races (thanks strawbewwy)
 - Bug Fix: Armor was not given back when respawning