@@ -17,6 +17,9 @@ v3.0 RC6
  - Bug Fix: Invisibility disappearing after use of Big Bad Voodoo (thanks mattypee)
  - Bug Fix: Changerace menu not appearing when joining server on listen server (thanks DesasterUK)
  - Bug Fix: Assist XP giving too much
+ - Bug Fix: Pending changerace never reset when a player disconnected (thanks kevlartester)
+ - Bug Fix: When giving Xp through admin command it wasn't always set correctly (thanks EchoSide)
+ - Bug Fix: Changing wc3_save_xp or wc3_xp_multiplier in game will no longer require a map restart to take affect
  - Change: Respawn time from 1.5 seconds to 0.2 (by ability or item)
  - Change: Bots skin will change now if they mole or buy chameleon
  - Change: (B5) No longer set maximum money to 16000 when setting money
